added and styled achievements page

--- a/Gamified Habit Tracker Blazor.Client/GamifiedHabitTrackerBlazor.Client.csproj
+++ b/Gamified Habit Tracker Blazor.Client/GamifiedHabitTrackerBlazor.Client.csproj
@@ -11,11 +11,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Pages\Achievements.razor.css" />
     <None Remove="Pages\HabitDropdown.razor.css" />
     <None Remove="Pages\LoginForm.razor.css" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="Pages\Achievements.razor.css" />
     <Content Include="Pages\HabitDropdown.razor.css" />
     <Content Include="Pages\LoginForm.razor.css" />
   </ItemGroup>
