--- a/Gamified Habit Tracker Blazor.Client/GamifiedHabitTrackerBlazor.Client.csproj
+++ b/Gamified Habit Tracker Blazor.Client/GamifiedHabitTrackerBlazor.Client.csproj
@@ -23,7 +23,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="8.0.10" />
   </ItemGroup>
 
   <ItemGroup>
