--- a/Gamified Habit Tracker Blazor.Shared/GamifiedHabitTrackerBlazor.Shared.csproj
+++ b/Gamified Habit Tracker Blazor.Shared/GamifiedHabitTrackerBlazor.Shared.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="8.0.10" />
+  </ItemGroup>
+
 </Project>
