--- a/Gamified Habit Tracker Blazor/GamifiedHabitTrackerBlazor.csproj
+++ b/Gamified Habit Tracker Blazor/GamifiedHabitTrackerBlazor.csproj
@@ -13,8 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Gamified Habit Tracker Blazor.Shared\GamifiedHabitTrackerBlazor.Shared.csproj" />
     <ProjectReference Include="..\Gamified Habit Tracker Blazor.Client\GamifiedHabitTrackerBlazor.Client.csproj" />
+    <ProjectReference Include="..\Gamified Habit Tracker Blazor.Shared\GamifiedHabitTrackerBlazor.Shared.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="8.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.10" />
