--- a/Gamified Habit Tracker Blazor.Client/GamifiedHabitTrackerBlazor.Client.csproj
+++ b/Gamified Habit Tracker Blazor.Client/GamifiedHabitTrackerBlazor.Client.csproj
@@ -33,6 +33,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="Pages\LoginPage.razor">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+    </Content>
     <Content Update="Pages\LoginForm.razor">
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
     </Content>
