--- a/Gamified Habit Tracker Blazor.Client/GamifiedHabitTrackerBlazor.Client.csproj
+++ b/Gamified Habit Tracker Blazor.Client/GamifiedHabitTrackerBlazor.Client.csproj
@@ -12,12 +12,14 @@
 
   <ItemGroup>
     <None Remove="Pages\Achievements.razor.css" />
+    <None Remove="Pages\Experiences.razor.css" />
     <None Remove="Pages\HabitDropdown.razor.css" />
     <None Remove="Pages\LoginForm.razor.css" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Include="Pages\Achievements.razor.css" />
+    <Content Include="Pages\Experiences.razor.css" />
     <Content Include="Pages\HabitDropdown.razor.css" />
     <Content Include="Pages\LoginForm.razor.css" />
   </ItemGroup>
