--- a/Gamified Habit Tracker Blazor/GamifiedHabitTrackerBlazor.csproj
+++ b/Gamified Habit Tracker Blazor/GamifiedHabitTrackerBlazor.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Gamified Habit Tracker Blazor.Client\GamifiedHabitTrackerBlazor.Client.csproj" />
     <ProjectReference Include="..\Gamified Habit Tracker Blazor.Shared\GamifiedHabitTrackerBlazor.Shared.csproj" />
+    <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="8.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.10" />
