added styling to profile page & moved home page to client
also made the home page take you directly to habits page if token is still good

--- a/Gamified Habit Tracker Blazor.Client/GamifiedHabitTrackerBlazor.Client.csproj
+++ b/Gamified Habit Tracker Blazor.Client/GamifiedHabitTrackerBlazor.Client.csproj
@@ -36,6 +36,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="Pages\Home.razor">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+    </Content>
     <Content Update="Pages\LoginPage.razor">
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
     </Content>
